# mlops5

./: .gitignore  .pre-commit-config.yaml  README.md
2-rag/demo/: README.md  main.py  pyproject.toml  settings.py
2-rag/demo/src/: generator.py  index.py  llm.py  retrieval.py  schema.py  settings.py
2-rag/lab/: README.md
3-api-layer/demo/: README.md  pyproject.toml  run.py
3-api-layer/demo/src/: settings.py
3-api-layer/demo/src/constants/: prompt.py
3-api-layer/demo/src/routers/: api.py  rest_retrieval.py  sse_retrieval.py  ws_retrieval.py
3-api-layer/demo/src/schemas/: __init__.py
3-api-layer/demo/src/services/: __init__.py  generator.py  llm.py  rag.py  retrieval.py
3-api-layer/lab/: README.md
